[tool.poetry]
name = "histology-analysis"
version = "0.1.0"
description = "Classification of histology images"
authors = ["zsofiak96 <kalosi.zsofia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
